tests/errors/type_error.ceos
fn print_int(a: int) -> int { a }

print_int("ASD")
